variables.RunHalf.scala.error
Compilation error:
RunHalf:8: error: type orange is not a member of object java.awt.Color
  if (getGroundColor():Color.orange){
                             ^